feat: update diagram to match tone

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -387,8 +387,8 @@ Subsequently, the system was transferred to real hardware using a \textbf{UR3e r
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\linewidth]{images/sim_vs_real.png}
-    \caption{Comparison between Simulation (Gazebo) and Real Hardware Setup (UR3e with Robotiq HandE gripper).}
-    \Description{Comparison between Simulation and Real Hardware}{Comparison between Simulation (Gazebo) and Real Hardware Setup (UR3e with Robotiq HandE gripper).}
+    \caption{Comparison between Real Hardware Setup (UR3e with Robotiq HandE gripper) and Simulation (Gazebo).}
+    \Description{Comparison between Real Hardware and Simulation}{Comparison between Real Hardware Setup (UR3e with Robotiq HandE gripper) and Simulation (Gazebo).}
     \label{fig:hardware-result-sim-vs-real}
 \end{figure}
 
