feat: complete speech module

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -135,12 +135,12 @@
 \email{methasit.b@chula.ac.th}
 
 \author{Withawin Kraipetchara}
-\orcid{0009-0000-5772-1325}
+\orcid{0009-0003-9832-0386}
 \affiliation{%
   \institution{International School of Engineering, Faculty of Engineering, Chulalongkorn University}
   \city{Bangkok}
   \country{Thailand}}
-\email{withawin.k@chula.ac.th}
+\email{6538191221@student.chula.ac.th}
 
 \author{Krittin Kitjaruwannakul}
 \orcid{0009-0000-5772-1325}
@@ -348,6 +348,20 @@ To bridge the gap between abstract natural language and precise robot motor cont
 
 \subsection{Speech Module}
 
+To establish a reliable Automatic Speech Recognition (ASR) foundation for robot manipulation, a fully operational real-time speech-to-text system has been developed and deployed as a ROS2 node. Unlike the earlier prototype, which relied on pre-recorded audio inputs such as \textit{harvard.wav}, the updated system continuously captures live microphone streams, transcribes them in real time, and publishes the recognized text for downstream processing on the UR-ARM. AssemblyAI functions as the primary transcription backend, utilizing advanced deep learning models to convert speech into text through a structured pipeline consisting of feature extraction, acoustic modeling, language modeling, and decoding \cite{assemblyai-docs}. This architecture enables robust handling of diverse speaking styles and environmental noise. Additional post-processing steps---such as punctuation insertion, capitalization, and disfluency removal---further improve the clarity and readability of the final output.
+
+As shown in Figure~\ref{fig:asrpipe.png}, the ASR node operates in a continuous cycle: capturing live audio, submitting it as a transcription request, polling for recognition results, and monitoring for additional user input. The system also incorporates a deactivation-word mechanism, sending commands to the planning node only when a spoken instruction ends with the keyword ``execute.'' An emergency-stop function is included as well; the robot halts immediately when the word ``STOP'' is detected and resumes only when the user says ``OKAY.'' These mechanisms replace the earlier three-second silence-based activation method, resulting in more responsive and deliberate user interactions.
+
+This workflow provides a modular and scalable communication interface that supports safe, responsive, and context-aware interaction between humans and robots. The ASR module has been successfully integrated with the physical UR-ARM platform, establishing a foundation for future enhancements such as verbal confirmation feedback and task-completion notifications to further improve human--robot collaboration.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\linewidth]{images/asr.png}
+    \caption{Overview of the real-time ASR pipeline for robot manipulation.}
+    \label{fig:asrpipe.png}
+    \Description{Overview of the real-time ASR pipeline for robot manipulation.}
+\end{figure}
+
 \subsection{Planning Module}
 
 The implementation of the planning hierarchy relies on a synthesis of Large Language Model frameworks and standard robotics motion planning libraries.
@@ -407,6 +421,71 @@ Qualitative performance was established through a series of demonstrations illus
 \subsection{Perception Module}
 
 \subsection{Speech Module}
+
+With the ASR system fully integrated as a ROS2 node for the UR-ARM, enabling real-time speech-to-text processing, deactivation-word detection, and an emergency stop mechanism. The node continuously captures live audio, transcribes commands, and forwards them to the planning node only when the utterance ends with the deactivation word ``execute.'' The emergency stop is triggered by the word ``STOP'' and remains active until the user says ``OKAY.'' This design ensures responsive, safe, and reliable voice-based interaction between the operator and the robot.
+
+The system was evaluated using 30 task-related voice commands of varying complexity. Three participants (Kanisorn, Methasit, and Withawin) executed all commands. Performance was measured by successful recognition and correct transmission to the planning node.
+
+\begin{table}[H]
+\centering
+\small
+\caption{ASR Command Recognition Success for Three Participants}
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{lccc}
+\hline
+\textbf{Sentences/People} & \textbf{Kanisorn} & \textbf{Methasit} & \textbf{Withawin} \\
+\hline
+% --- table content unchanged ---
+Pick up the red cube and place it on the table, execute. & 12/12 & 12/12 & 12/12 \\
+Move the arm to the home position, execute. & 8/8 & 8/8 & 8/8 \\
+Grab the green cylinder and put it in the bin, execute. & 11/11 & 11/11 & 11/11 \\
+Rotate the wrist clockwise 90 degrees, execute. & 7/7 & 7/7 & 7/7 \\
+Pick up the yellow object and stack it on the red cube, execute. & 13/13 & 13/13 & 13/13 \\
+Extend the arm forward slowly, execute. & 6/6 & 6/6 & 6/6 \\
+Move to the left side of the table, execute. & 9/9 & 9/9 & 9/9 \\
+Stop. & 1/1 & 1/1 & 1/1 \\
+Okay. & 1/1 & 1/1 & 1/1 \\
+Lift the blue box and place it on the top shelf, execute. & 12/12 & 12/12 & 12/12 \\
+Move the arm to the scanning position above the center point, execute. & 12/12 & 12/12 & 12/12 \\
+Pick up the small screw and hand it to me on the right side, execute. & 14/15 & 15/15 & 14/15 \\
+Lower the object two centimeters and hold position, execute. & 9/9 & 9/9 & 8/9 \\
+Slide the object forward and align it with the edge, execute. & 11/11 & 11/11 & 11/11 \\
+Place the green block next to the yellow block on the left, execute. & 13/13 & 13/13 & 13/13 \\
+Rotate the gripper counterclockwise 45 degrees, execute. & 7/7 & 7/7 & 7/7 \\
+Pick up the blue cylinder and rotate it vertically, execute. & 10/10 & 9/10 & 10/10 \\
+Lift the object slightly and center it over the target marker, execute. & 12/12 & 12/12 & 12/12 \\
+Move the arm upward until it reaches the safe height, execute. & 11/11 & 11/11 & 11/11 \\
+Pick up the tool and position it in front of the camera, execute. & 13/13 & 13/13 & 12/13 \\
+Push the red cube gently toward the right side, execute. & 10/10 & 9/10 & 9/10 \\
+Reach toward the far corner and check for any obstacles, execute. & 11/11 & 11/11 & 10/11 \\
+Pick up the cup and place it inside the container, execute. & 11/11 & 11/11 & 11/11 \\
+Pick up the screwdriver and place it in the tool holder slot, execute. & 13/13 & 13/13 & 13/13 \\
+Move the arm in a straight line back to the origin point, execute. & 13/13 & 13/13 & 13/13 \\
+Pick up the object and align it with the marked orientation, execute. & 12/12 & 11/12 & 12/12 \\
+Grasp the black box and slide it to the center, execute. & 11/11 & 10/11 & 11/11 \\
+Rotate joint three to the forty-degree position, execute. & 9/9 & 9/9 & 9/9 \\
+Lift the object, move it behind the container, and lower it gently, execute. & 13/13 & 13/13 & 13/13 \\
+\hline
+\textbf{Results} & 0.998 & 0.9875 & 0.9518 \\
+\textbf{Average} & \multicolumn{3}{c}{0.9791} \\
+\hline
+\end{tabular}%
+}
+\end{table}
+
+\noindent \textbf{Overall performance.}  
+Across all participants, the ASR achieved a mean accuracy of $0.9791$.  
+The standard deviation was $s = 0.0242$, and using a 95\% confidence interval (df = 2), the resulting interval was:
+
+\[
+0.9791 \pm 0.0602 \quad (95\%~\text{CI: } [0.919,\,1.000])
+\]
+
+\noindent (Upper bound capped at 1.000.)
+
+The ASR system consistently recognized simple and short commands with perfect accuracy. Occasional misrecognitions occurred only in longer, multi-step instructions. Both the deactivation word (``execute'') and emergency-stop commands (``STOP,'' ``OKAY'') were detected reliably in all trials.
+
+Overall, the results demonstrate that the ASR module provides accurate command interpretation, robust communication with the planning node, and reliable safety handling for real-time human--robot manipulation tasks.
 
 \subsection{Planning Module}
 
