--- a/refs-main.bib
+++ b/refs-main.bib
@@ -374,3 +374,11 @@ note = {Accessed on 13 November 2025}
       primaryClass={cs.RO},
       url={https://arxiv.org/abs/2505.03233}, 
 }
+
+@misc{assemblyai-docs,
+  title        = {AssemblyAI API Documentation},
+  author       = {AssemblyAI, Inc.},
+  year         = {2025},
+  howpublished = {\url{https://www.assemblyai.com/docs}},
+  note         = {Accessed: 2025-10-22}
+}
