Add LAM paper updates with perception pipeline

--- a/refs-main.bib
+++ b/refs-main.bib
@@ -382,3 +382,40 @@ note = {Accessed on 13 November 2025}
   howpublished = {\url{https://www.assemblyai.com/docs}},
   note         = {Accessed: 2025-10-22}
 }
+
+
+@article{macenski2022robot,
+  title={Robot Operating System 2: Design, architecture, and uses in the wild},
+  author={Macenski, Steven and Foote, Tully and Gerkey, Brian and Lalancette, Chris and Woodall, William},
+  journal={Science Robotics},
+  volume={7},
+  number={66},
+  pages={abm6074},
+  year={2022},
+  publisher={American Association for the Advancement of Science}
+}
+
+@inproceedings{kirillov2023segment,
+  title={Segment anything},
+  author={Kirillov, Alexander and Mintun, Eric and Ravi, Nikhila and Mao, Hanzi and Rolland, Chloe and Gustafson, Laura and Xiao, Tete and Whitehead, Spencer and Berg, Alexander C and Lo, Wan-Yen and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={4015--4026},
+  year={2023}
+}
+
+@inproceedings{fang2020graspnet,
+  title={{GraspNet-1Billion}: A Large-Scale Benchmark for General Object Grasping},
+  author={Fang, Hao-Shu and Wang, Chenxi and Gou, Minghao and Lu, Cewu},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={11444--11453},
+  year={2020}
+}
+
+@inproceedings{radford2021learning,
+  title={Learning transferable visual models from natural language supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle={International Conference on Machine Learning},
+  pages={8748--8763},
+  year={2021},
+  organization={PMLR}
+}
